--- a/public/asset/css/style.css
+++ b/public/asset/css/style.css
@@ -17,13 +17,13 @@ svg{
 }
 
 .container{
-        position:relative;
-        top:200px;
-        left:20%;
-        display:block;
-        margin-bottom:80px;
-        width:450px;
-        height:490px;
+    position:relative;
+    top:150px;
+    left:15%;
+    display:block;
+    margin-bottom:80px;
+    width:300px;
+    height:900px;
     background:#fff;
     border-radius:5px;
     overflow:hidden;
@@ -66,15 +66,17 @@ input{
   }
 }
 
-.email,
+.alias,
 .nombre,
-.pwd{
+.apellidos,
+.email,
+.clave{
         position:relative;
         z-index:1;
         border-bottom:1px solid rgba(0,0,0,.1);
         padding-left:20px;
         font-family: 'Open Sans', sans-serif;
-        text-transform:uppercase;
+      /*  text-transform:uppercase; */
         color:#858585;
         font-weight:lighter;
         -webkit-transition:.5s;
@@ -141,6 +143,12 @@ h3{
         color:#900C3F;
 }
 
+.error{
+    position:relative;
+    font-family: 'Open Sans', sans-serif;
+    font-weight:lighter;
+    color:#8b0000;
+}
 /*
 .sig{
    position:absolute;
