--- a/Proyecto/public/asset/css/style.css
+++ b/Proyecto/public/asset/css/style.css
@@ -113,6 +113,11 @@ button{
         -webkit-transition:.5s;
         transition:.5s;
 }
+button.dropdown{
+        width: 100%;
+        padding: 0.7rem;
+        float: none;
+}
 
 .boton2{
         float:right;
