--- a/Proyecto/public/asset/css/style.css
+++ b/Proyecto/public/asset/css/style.css
@@ -113,19 +113,19 @@ button{
         -webkit-transition:.5s;
         transition:.5s;
 }
-button.dropdown{
-        width: 100%;
-        padding: 0.7rem;
-        float: none;
-}
+
 
 nav button {
-		width: 90%;
+	width: 100%;
     height: 100%;
     padding: 0.5rem;
     background-color: white;
     color: black;
     
+}
+
+nav button:hover{
+	background-color: #c6b1da;
 }
 
 .boton2{
