--- a/Proyecto/public/asset/css/style.css
+++ b/Proyecto/public/asset/css/style.css
@@ -1,14 +1,18 @@
-*{
-        margin:0;
-        padding:0;
-        -webkit-box-sizing:border-box;
-        -moz-box-sizing:border-box;
+
+* {
+        margin: 0;
+        padding: 0;
+        -webkit-box-sizing: border-box;
+        -moz-box-sizing: border-box;
 }
 
-body{
+
+
+body {
         font-family: 'Open Sans', sans-serif;
         background: #e2e2e2;
 }
+
 
 svg{
         position:fixed;
@@ -110,6 +114,20 @@ button{
         transition:.5s;
 }
 
+
+nav button {
+	width: 100%;
+    height: 100%;
+    padding: 0.5rem;
+    background-color: white;
+    color: black;
+    
+}
+
+nav button:hover{
+	background-color: #c6b1da;
+}
+
 .boton2{
         float:right;
         margin-top: 25px;
@@ -148,13 +166,6 @@ h3{
     font-family: 'Open Sans', sans-serif;
     font-weight:lighter;
     color:#8b0000;
-}
-.menu{
-    position:relative;
-    width:150px;
-    left:65%;
-    display:block;
-    
 }
 /*
 .sig{
