--- a/Proyecto/public/asset/css/style.css
+++ b/Proyecto/public/asset/css/style.css
@@ -1,18 +1,39 @@
-
-* {
-        margin: 0;
-        padding: 0;
-        -webkit-box-sizing: border-box;
-        -moz-box-sizing: border-box;
+*{
+	margin: 0;
+	padding: 0;
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
 }
-
-
 
 body {
-        font-family: 'Open Sans', sans-serif;
-        background: #e2e2e2;
+	font-family: 'Open Sans', sans-serif;
+	background: #e2e2e2;
 }
 
+.inputsForm{
+    display: grid;
+    column-gap: 1em;
+    grid-template-columns: 146px auto;
+	/* grid-template-columns: auto minmax(max-content, 490px); */
+    align-items: center;
+}
+
+.signUp, .formEditPerfil{
+	max-width: 650px;
+    margin: auto;
+    margin-top: 2em;
+}
+
+.textError{
+	border-radius: 0.375rem ;
+	color: #842029 !important;
+	background-color: #f8d7da;
+	border: 1px solid #f5c2c7;
+	
+}
+
+
+/* 
 
 svg{
         position:fixed;
@@ -80,7 +101,7 @@ input{
         border-bottom:1px solid rgba(0,0,0,.1);
         padding-left:20px;
         font-family: 'Open Sans', sans-serif;
-      /*  text-transform:uppercase; */
+        text-transform:uppercase; 
         color:#858585;
         font-weight:lighter;
         -webkit-transition:.5s;
@@ -166,7 +187,7 @@ h3{
     font-family: 'Open Sans', sans-serif;
     font-weight:lighter;
     color:#8b0000;
-}
+} */
 /*
 .sig{
    position:absolute;
