--- a/Proyecto/public/asset/css/style.css
+++ b/Proyecto/public/asset/css/style.css
@@ -17,7 +17,7 @@ body {
 	/* grid-template-columns: auto minmax(max-content, 490px); */
     align-items: center;
 }
-/* daniel */
+
 .signUp, .formEditPerfil{
 	max-width: 680px;
     margin: auto;
@@ -30,6 +30,19 @@ body {
 	background-color: #f8d7da;
 	border: 1px solid #f5c2c7;
 	
+}
+
+nav button {
+	width: 100%;
+    height: 100%;
+    padding: 0.5rem;
+    background-color: white;
+    color: black;
+    border: none;
+}
+
+nav button:hover{
+	background-color: #c6b1da;
 }
 
 
@@ -136,20 +149,9 @@ button{
 }
 
 
-nav button {
-	width: 100%;
-    height: 100%;
-    padding: 0.5rem;
-    background-color: white;
-    color: black;
-    
-}
-
-nav button:hover{
-	background-color: #c6b1da;
-}
 
 .boton2{
+
         float:right;
         margin-top: 25px;
         margin-right: 20px;
