--- a/Proyecto/public/asset/css/style.css
+++ b/Proyecto/public/asset/css/style.css
@@ -12,10 +12,10 @@ body {
 
 .inputsForm{
     display: grid;
-    column-gap: 1em;
-    grid-template-columns: 146px auto;
-	/* grid-template-columns: auto minmax(max-content, 490px); */
+    gap: 1em;
+    grid-template-columns: max-content auto;
     align-items: center;
+	text-align: right;
 }
 
 .signUp, .formEditPerfil{
