--- a/Proyecto/public/asset/css/style.css
+++ b/Proyecto/public/asset/css/style.css
@@ -1,8 +1,8 @@
 *{
 	margin: 0;
 	padding: 0;
-	-webkit-box-sizing: border-box;
-	-moz-box-sizing: border-box;
+/*	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;*/
         font-family:Comic Sans MS,  cursive;
        
       
@@ -10,30 +10,40 @@
 
 
 body {
-	/*font-family: 'Open Sans', sans-serif;*/
+    font-family: 'Open Sans', sans-serif;
     margin: 0px;
     padding: 0px;
-    background-color: royalblue;
+    /*background-color: royalblue;*/
         
 }
-nav{
-    color: royalblue;
+.navbar{
+    color: #6AA3E7;
     margin-top: 0px;
     padding: 0px;
 }
 
-nav div{
+.navbar div{
     margin: 0px;
-    padding: 0px;
-    background-color: royalblue;
+    padding: 5px;
+    background-color: #6AA3E7;
 }
 
 .fa-user, .nav-link, .navbar-brand{
     color: white;
 }
 
+.inicio{
+    background-image: url("../img/Geometric-Background-012.jpg"); 
+    background-repeat: no-repeat;
+    background-size: cover;
+   
+}
 
-
+.ejecutando{
+    background-image: url("../img/geometric.png"); 
+    background-repeat: no-repeat;
+    background-size: cover;
+}
 
 .sesion{
     margin: 2em auto;
@@ -41,9 +51,9 @@ nav div{
     background-color: white;
     width: 270px;
     height:360px;
-    border:solid;
+    /*border:solid;*/
     border-width:2px;
-    border-color: #41464b;
+    /*border-color: #41464b;*/
     border-radius: 8px;
     
 }
@@ -75,16 +85,25 @@ input{
 }
 
 nav button {
-	width: 100%;
-    height: 100%;
+    width: 100%;
+    /*height: 100%;*/
+    align-content: center;
     padding: 0.5rem;
     background-color: white;
     color: black;
     border: none;
 }
+button{
+     padding: 5px 5px 5px 5px;
+}
+.boton{
+    padding: 10px;
+    /*margin: 10px 10px;*/
+}
 
 nav button:hover{
-	background-color: #c6b1da;
+    
+    background-color: #6AA3E7;
 }
 
 .hide{
