--- a/Proyecto/public/asset/css/style.css
+++ b/Proyecto/public/asset/css/style.css
@@ -16,6 +16,8 @@ body {
     /*background-color: royalblue;*/
         
 }
+
+
 .navbar{
     color: #6AA3E7;
     margin-top: 0px;
@@ -43,6 +45,11 @@ body {
     background-image: url("../img/geometric.png"); 
     background-repeat: no-repeat;
     background-size: cover;
+}
+
+.container{
+    
+    background-color: rgb(255, 255, 255, 0.8);
 }
 
 .sesion{
@@ -84,26 +91,36 @@ input{
 	
 }
 
+
 nav button {
     width: 100%;
     /*height: 100%;*/
     align-content: center;
-    padding: 0.5rem;
+    /*padding: 0.5rem;*/
     background-color: white;
     color: black;
     border: none;
 }
 button{
-     padding: 5px 5px 5px 5px;
+    padding: 5px 5px 5px 5px;
+    /*background-color: #B6DDF8;*/
+    /*background: linear-gradient(#6AA3E7, violet);*/
+    background: linear-gradient(#B6DDF8, white);
+    border:solid 0.5px;
+    border-color: grey;
+    border-radius: 8px;
+     
 }
-.boton{
-    padding: 10px;
-    /*margin: 10px 10px;*/
+
+
+nav button{
+    background-color: white; 
+    background: linear-gradient(white, white);
 }
 
 nav button:hover{
-    
-    background-color: #6AA3E7;
+   /*background-color: #B6DDF8;*/
+   background: linear-gradient(#B6DDF8, white);
 }
 
 .hide{
