--- a/Proyecto/public/asset/css/style.css
+++ b/Proyecto/public/asset/css/style.css
@@ -185,9 +185,9 @@ td{
 /*AÑADIRTRASTERO*/
 /*////////////////////////////////////////////////////*/
 /*BOTONES*/
-.volver{
+/*.volver{
     background: linear-gradient(grey, white);
-}
+}*/
 
 .papeleraOculta button{
     background: rgb(255, 255, 255, 0);
@@ -196,6 +196,8 @@ td{
 nav button {
     margin: 0px;
     width: 100%;
+    background-color: white; 
+    background: linear-gradient(white, white);
     /*height: 100%;*/
     align-content: center;
     /*padding: 0.5rem;*/
@@ -223,14 +225,9 @@ button{
 }*/
 
 
-nav button{
-    background-color: white; 
-    background: linear-gradient(white, white);
-}
-
 nav button:hover{
    /*background-color: #B6DDF8;*/
-   background: linear-gradient(#B6DDF8, white);
+   background: linear-gradient(#ff7f27, white);
 }
 
 /*BOTONES*/
