--- a/Proyecto/public/asset/css/style.css
+++ b/Proyecto/public/asset/css/style.css
@@ -14,6 +14,7 @@ body {
         
 }
 
+
 /*////////////////////////////////////////////////////*/
  /*APP Y NAVBAR*/ 
 
@@ -23,14 +24,16 @@ body {
 /*    background-image: url("../img/fondo.png");
     background-image: url("../img/Geometric-Background-012.jpg"); */
     background-repeat: no-repeat;
-    background-size: cover
+    background-attachment: fixed;
+    background-size: cover;
    
 }
 
 .ejecutando{
     background-image: url("../img/imagenSecundaria.png"); 
     background-repeat: repeat-y;
-    background-size: 1350px;
+    background-attachment: fixed;
+    background-size: cover;
 }
 
  .navbar{
@@ -138,7 +141,7 @@ td{
     margin-top:20px;
     margin-bottom: 20px;
     /*background: linear-gradient(rgb(255, 255, 255, 0.9),rgb(0, 168, 243, 0.8));*/
-    background: linear-gradient(#addf13,rgb(255, 255, 255, 0.8));
+    background: linear-gradient(#addf13, rgb(255, 255, 255, 0.8));
     /*background: rgb(255, 255, 255, 0.9);*/
     border:solid 0.5px;
     border-radius: 8px;
@@ -171,16 +174,16 @@ td{
 /*////////////////////////////////////////////////////*/
 /*VERTRASTERO*/
 #menu{
-    padding: 15px;
+    padding: 10px;
     border:solid 0.5px;
     border-radius: 8px;
     border-color: grey;
-    background: linear-gradient(rgb(0, 168, 243, 0.8), rgb(255, 255, 255, 0.8));
+    /*background: linear-gradient(rgb(255, 255, 255, 1), rgb(255, 255, 255, 0.7));*/
+    background: linear-gradient(#addf13,rgb(255, 255, 255, 0.8));
 }
 #vtVolver{
     margin-top: 30px;
     text-align: right;
-    padding-right: 235px;
 }
 
 #vtnombre{
@@ -198,7 +201,7 @@ td{
 }
 
 .vtContainer{
-    width: 1500px;
+    width: 90%;
     margin-right: 5%;
     margin-left: 5%;
    
@@ -209,6 +212,7 @@ td{
     font-size: 15px;
     border-radius: 8px;
     border-color: grey;
+    margin: 5px;
 }
 
 .vtTrCabecera{
@@ -236,7 +240,7 @@ td{
     width: 320px;
 }
 .vtTdUbicacion{
-    width: 320px;
+    width: 355px;
 }
 /*VERTRASTERO*/
 /*////////////////////////////////////////////////////*/
@@ -350,17 +354,28 @@ nav button:hover{
 
 /*PAGINA BUSCAR PRODUCTO*/
 .opciones{
-    margin: 50px 100px 50px 100px;
-    padding: 2em;
+/*    margin: 100px 300px 100px 100px;
+    padding-left: 10%;
+    padding-right: 10%;*/
+    margin: 0 auto;
+    width: 60%;
+    height: auto;
     background-color: white;
     border:solid 1px;
     border-color: grey;
     border-radius: 8px; 
 }
 
+.opcionesdiv{
+    margin: 0 auto;
+    text-align: center;
+    padding: 15px 0px 15px 0px;
+}
+
+
+
 .volver{
-    padding: 0px 10px 0px 10px;
-    margin-left:85%;
+    padding: 5px 10px 5px 10px;
     background: linear-gradient(#B6DDF8, white);
     border:solid 0.5px;
     border-color: grey;
