--- a/Proyecto/public/asset/css/style.css
+++ b/Proyecto/public/asset/css/style.css
@@ -377,11 +377,16 @@ nav button:hover{
     opacity: 0.65;
 }
 
-
 .deleteAlert{
-    translate: 100vw;
-    transition: translate 2s;    
-}
+    opacity: 0;
+    transition: opacity 2s;
+} 
+.deleteAlert-delay{
+    opacity: 0;
+    transition: opacity 2s;
+    transition-delay: 5s;
+} 
+
 
 .textError{
     color: red;
